src/main/java/com/example/sustainance/Errors/IllegalCredentialsException.java
package com.example.sustainance.Errors;

public class IllegalCredentialsException extends Exception{
    public IllegalCredentialsException(String message) {
        super(message);
    }
}
